<resources>
    <string name="app_name">MeNS</string>
    <string name="gyro_lbl">Gyroscope:</string>
    <string name="accl_lbl">Accelerometer:</string>
    <string name="start_btn">START</string>
    <string name="save_btn">SAVE DATA</string>
    <string name="enter_pin">ENTER PIN</string>
    <string name="confirm">CONFIRM</string>
    <string name="test1L">1</string>
    <string name="test1R">2</string>
    <string name="test2L">3</string>
    <string name="test2R">4</string>
    <string name="test3L">5</string>
    <string name="test3R">6</string>

    <string name="done_lbl">DONE</string>
    <string name="send_btn">SEND</string>
    <string name="delete_btn">DELETE</string>
    <string name="back_btn">BACK</string>

    <string name="data_btn">DATA</string>
    <string name="home_btn">HOME</string>

    <string name="raw_btn">RAW</string>
    <string name="freq_btn">FREQ.</string>
    <string name="amp_btn">AMPL.</string>

    <string name="settings_btn">SETTINGS</string>

    <string name="cancel_btn">CANCEL</string>
    <string name="db_ip">Database IP:</string>
    <string name="db_port">Database PORT:</string>
    <string name="db_username">Database username:</string>
    <string name="db_passwd">Database passwd:</string>
    <string name="db_scheme">Database scheme:</string>

    <string name="type_lbl">TYPE:</string>
    <string name="date_lvl">DATE:</string>


    <string name="creating_db">Creating database</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
